<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_fingerprint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/headerLayout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_fingerprint_24px"
            android:id="@+id/icon"
            android:paddingTop="2dp"
            android:layout_marginBottom="30dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pBlue"
            android:textSize="24sp"
            android:text="@string/title_fingerprint"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pBlue"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/desc"
            android:text="@string/desc_fingerprint"
            android:layout_margin="16dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"/>

        <Button
            android:id="@+id/refresh"
            android:background="@drawable/button_border"
            android:padding="10dp"
            android:textColor="@color/pBlue"
            android:text="@string/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#ff000000"
                android:background="#ffff0000"
                android:layout_marginTop="10sp"
                android:text=""
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="12sp"
                android:background="#ffcccccc"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/scan_states_color1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#ff00ff00"
                    android:layout_weight="1"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:textSize="12sp"
                    android:text="" />
                <TextView
                    android:id="@+id/scan_states_color2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#ff0000ff"
                    android:layout_weight="1"
                    android:layout_marginRight="10sp"
                    android:textSize="12sp"
                    android:text="" />
                <TextView
                    android:id="@+id/scan_states_color3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#ff00ffff"
                    android:layout_weight="1"
                    android:layout_marginRight="10sp"
                    android:textSize="12sp"
                    android:text="" />
                <TextView
                    android:id="@+id/scan_states_color4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#ffff00ff"
                    android:layout_weight="1"
                    android:layout_marginRight="10sp"
                    android:textSize="12sp"
                    android:text="" />
            </LinearLayout>
            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10sp"
                android:paddingRight="14sp"
                android:paddingLeft="14sp"
                android:paddingBottom="14sp"
                android:background="#ffeeeeee"
                android:contentDescription="@string/preview_image" />

            <Button
                android:id="@+id/connect"
                android:background="@drawable/button_border"
                android:padding="10dp"
                android:textColor="@color/pBlue"
                android:text="@string/enviar_huella"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />



            <Button
                android:visibility="gone"
                android:id="@+id/btnActivateScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/devLayout"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Devices:" />
                <Spinner
                    android:id="@+id/spinnerDevs"
                    android:layout_width="138dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btnEnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Enum" />
                <CheckBox android:id="@+id/cbUsbHostMode"
                    android:text="USB Host Mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:checked="true"/>
            </LinearLayout>

        </LinearLayout>


        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/save_Image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_Image"
            android:textSize="16sp"
            android:padding="10sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/close_scanner_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/close_scanner_btn"
            android:textSize="16sp"
            android:padding="10sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/start_capture_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start_capture_btn"
            android:textSize="16sp"
            android:padding="10sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/stop_capture_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stop_capture_btn"
            android:textSize="16sp"
            android:padding="10sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Spinner
            android:id="@+id/capture_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16sp"
            android:textColor="#ff000000" />
        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh_btn"
            android:textSize="16sp"
            android:padding="10sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/device_count_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_count_name"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ff000000"
                android:background="#ffccccee" />
            <TextView
                android:id="@+id/device_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_count_default"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ff000000"
                android:background="#ffeeeeff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/status_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_name"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ff000000"
                android:background="#ffccccee" />
            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_default"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ff000000"
                android:background="#ffeeeeff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/frame_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frame_time_name"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ff000000"
                android:background="#ffccccee"/>
            <TextView
                android:id="@+id/frame_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frame_time_default"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ff000000"
                android:background="#ffeeeeff" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>




</RelativeLayout>